[package]
name = "puya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
dialoguer = { git = "https://github.com/mitsuhiko/dialoguer", features = ["fuzzy-select"] }
console = "0.15"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[profile.release]
lto = true
codegen-units = 1
